# Programowanie-grafiki-3d

./: .gitignore  CMakeLists.txt
src/Exercises/Zadanie_10/Ruch_Kamery/: app.cpp  app.h
src/Exercises/Zadanie_11/Animacja_piramidy/: CMakeLists.txt  app.cpp  app.h  pyramid.cpp  pyramid.h  rotation.h
src/Exercises/Zadanie_11/Animacja_piramidy/shaders/: base_fs.glsl
src/Exercises/Zadanie_12/Oteksturowana_Piramidka/: CMakeLists.txt  app.cpp  app.h  pyramid.h
src/Exercises/Zadanie_12/Oteksturowana_Piramidka/shaders/: base_fs.glsl
src/Exercises/Zadanie_13/Oswielenie_dyfuzyjne/: CMakeLists.txt  app.cpp  app.h  pyramid.cpp  quad.cpp  quad.h
src/Exercises/Zadanie_2/Triangle/: app.cpp
src/Exercises/Zadanie_2/Triangle/Colors/: app.cpp
src/Exercises/Zadanie_3/Indices/: app.cpp
src/Exercises/Zadanie_4/Uniforms/: app.cpp
src/Exercises/Zadanie_5/PVM/: app.cpp  app.h
src/Exercises/Zadanie_6/Piramidka/: app.cpp
src/Exercises/Zadanie_7/Backface_culling/: CMakeLists.txt  app.cpp
src/Exercises/Zadanie_8/Zmiana_rozmiarow_okna/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Zadanie_9/Zoomowanie/: app.cpp  app.h
